<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/infoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:padding="2dp"
                android:text="Name placeholder"
                android:textSize="48sp" />

            <ImageView
                android:id="@+id/infoImage"
                android:layout_width="350dp"
                android:layout_height="250dp"
                android:layout_marginHorizontal="30dp" />

            <TextView
                android:id="@+id/descriptionHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="2dp"
                android:text="@string/description"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/infoDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="none"
                android:maxLines="8"
                android:minLines="2"
                android:padding="2dp"
                android:text="Description Placeholder"
                android:layout_weight="1"
                android:scrollHorizontally="false"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/sizeHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="2dp"
                android:text="@string/size"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/infoSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="8"
                android:minLines="2"
                android:layout_weight="1"
                android:scrollHorizontally="false"
                android:ellipsize="end"
                android:padding="2dp"
                android:text="Size Placeholder"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/shapeHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="2dp"
                android:text="@string/shape"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/infoShape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:maxLines="8"
                android:minLines="2"
                android:layout_weight="1"
                android:scrollHorizontally="false"
                android:padding="2dp"
                android:text="Shape Placeholder"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/FindingHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="2dp"
                android:text="@string/finding"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/infoFinding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="8"
                android:minLines="2"
                android:layout_weight="1"
                android:scrollHorizontally="false"
                android:ellipsize="end"
                android:padding="2dp"
                android:text="Finding Placeholder"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/habitatHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="2dp"
                android:text="@string/habitat"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/infoHabitat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="8"
                android:minLines="2"
                android:layout_weight="1"
                android:scrollHorizontally="false"
                android:ellipsize="end"
                android:padding="2dp"
                android:text="Habitat Placeholder"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dietHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="2dp"
                android:text="@string/diet"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/infoDiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="8"
                android:minLines="2"
                android:layout_weight="1"
                android:scrollHorizontally="false"
                android:ellipsize="end"
                android:padding="2dp"
                android:text="Diet Placeholder"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nestHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="2dp"
                android:text="@string/nest"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/infoNest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="8"
                android:minLines="2"
                android:layout_weight="1"
                android:scrollHorizontally="false"
                android:ellipsize="end"
                android:padding="2dp"
                android:text="Nest Placeholder"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/behaviorHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="2dp"
                android:text="@string/behavior"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/infoBehavior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="8"
                android:minLines="2"
                android:layout_weight="1"
                android:scrollHorizontally="false"
                android:ellipsize="end"
                android:padding="2dp"
                android:text="Behavior Placeholder"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/conservationHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="2dp"
                android:text="@string/conservation"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/infoConservation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="8"
                android:minLines="2"
                android:layout_weight="1"
                android:scrollHorizontally="false"
                android:ellipsize="end"
                android:padding="2dp"
                android:text="Conservation Placeholder"
                android:textSize="16sp" />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>