<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/GuideTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:padding="2dp"
                android:text="@string/Guide_title"
                android:textColor="#000000"
                android:textSize="48sp"
                app:fontFamily="@font/arvo" />

            <ImageView
                android:id="@+id/image1"
                android:layout_width="350dp"
                android:layout_height="250dp"
                android:layout_marginHorizontal="30dp"
                app:srcCompat="@android:drawable/house_sparrow" />

            <TextView
                android:id="@+id/Header1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="2dp"
                android:text="@string/header1"
                android:textSize="32sp"
                app:fontFamily="@font/arvo"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/paragraph1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:ellipsize="none"
                android:maxLines="8"
                android:minLines="2"
                android:padding="2dp"
                android:scrollHorizontally="false"
                android:text="@string/paragraph1"
                android:textSize="16sp"
                app:fontFamily="@font/arvo"
                android:textColor="#000000" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>